--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL=https://wallet-api-goit.herokuapp.com/api
-REACT_APP_API_URL=http://localhost:8080
+REACT_APP_API_URL=https://accounts-panel-api.fly.dev
+# REACT_APP_API_URL=http://localhost:8080
